--- a/index.html
+++ b/index.html
@@ -2,122 +2,228 @@
 <html lang="es">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ConstulivianasRPG</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <title>RPGCONSTRULIVIANASRPG</title>
+
+    <link rel="stylesheet" href="/assets/css/indexStyles.css">
+    <link rel="shortcut icon" href="/assets/img/Logo_dark.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css"/>
+
 </head>
 
 <body>
 
-    <header id="inicio" class="header">
-        <section class="header_nav">
-            <a href="./index.html" class="header_icon">
-                <img src="./assets/img/Logo_dark.png" alt="Construlivianas_logo">
-            </a>
+    <div class="layout">
 
-            <input id="check" type="checkbox">
-            <label for="check" class="checkbtn">
-                <i class="fa-solid fa-bars"></i>
-            </label>
-            <nav class="nav">
-                <a href="#inicio">Inicio</a>
-                <a href="#trabajos">Trabajos</a>
-                <a href="#acerca">Acerca</a>
-                <a href="#mision_vision">Misión y visión</a>
-                <a href="#contacto">Contactanos</a>
-            </nav>
-        </section>
+        <header class="header blur">
 
-        <section class="inicio_texto">
-            <h1>RPG CONSTRULIVIANAS</h1>
-            <p>
-                Somos una empresa dedicada a la construcción, con capacidad para diseñar, planificar, construir y administrar la ejecución de proyectos de obra civil. Nuestro objetivo es ofrecer soluciones integrales, a las necesidades de nuestros clientes, entregando calidad y garantía en todo lo que hacemos.
-            </p>
-        </section>
-    </header>
+            <section class="header_nav">
 
-    <main>
-
-        <section id="trabajos">
-            <h1>TRABAJOS</h1>
-            <div class="portfolio">
-                <a href="./assets/portfolio/grupoCrystal.html" class="portfolioItem">
-                    <img src="./assets/img/grupoCrystal/1.jpeg">
-                    <div class="portfolioItem_title">
-                        <h4>Grupo crystal</h4>
-                    </div>
+                <a href="/" class="header_icon">
+                    <!-- <img src="/assets/img/Logo_dark.svg" alt=""> -->
+                    <p>RPGCONSTRULIVIANAS<span>.</span></p>
                 </a>
-                <a href="./assets/portfolio/puntoBlanco.html" class="portfolioItem">
-                    <img src="./assets/img/puntoBlanco/2.jpeg">
-                    <div class="portfolioItem_title">
-                        <h4>Punto blanco</h4>
+
+                <input id="check" type="checkbox">
+                <label for="check" class="checkbtn">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="24"
+                        height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M4 6l16 0" />
+                        <path d="M4 12l16 0" />
+                        <path d="M4 18l16 0" />
+                    </svg>
+                </label>
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li><a href="/#inicio">Inicio</a></li>
+                        <li><a href="/#trabajos">Trabajos</a></li>
+                        <li><a href="/#acerca">Acerca</a></li>
+                        <li><a href="/#mision_vision">Misión y visión</a></li>
+                        <li><a href="/#contacto">Contactanos</a></li>
+                    </ul>
+                </nav>
+
+            </section>
+
+        </header>
+
+        <main>
+
+            <section id="inicio" class="inicio_texto p-6-mw-850">
+                <h1>¿QUIENES SOMOS?</h1>
+                <p>
+                    Somos una empresa dedicada a la construcción, <span class="col-green-200">con capacidad para diseñar, planificar, construir y administrar la ejecución de proyectos de obra civil</span>. <span class="col-white">Nuestro objetivo es ofrecer soluciones integrales, a las necesidades de nuestros clientes</span>, entregando calidad y garantía en todo lo que hacemos.
+                </p>
+            </section>
+
+            <section id="trabajos" class="p-6-mw-850">
+                <h1>TRABAJOS</h1>
+                <div class="portfolio">
+
+                    <a href="./assets/portfolio/grupoCrystal.html" class="portfolioItem">
+                        <img src="./assets/img/grupoCrystal/1.jpeg">
+                        <div class="portfolioItem_title">
+                            <h4>Grupo crystal</h4>
+                        </div>
+                    </a>
+                    <a href="./assets/portfolio/puntoBlanco.html" class="portfolioItem">
+                        <img src="./assets/img/puntoBlanco/2.jpeg">
+                        <div class="portfolioItem_title">
+                            <h4>Punto blanco</h4>
+                        </div>
+                    </a>
+                    <a href="./assets/portfolio/tanninoVelez.html" class="portfolioItem">
+                        <img src="./assets/img/tanninoVelez/1.jpeg">
+                        <div class="portfolioItem_title">
+                            <h4>Tannino Velez</h4>
+                        </div>
+                    </a>
+                    <a href="./assets/portfolio/tiendaVelez.html" class="portfolioItem">
+                        <img src="./assets/img/tiendaVelez/1.jpeg">
+                        <div class="portfolioItem_title">
+                            <h4>Tienda Velez</h4>
+                        </div>
+                    </a>
+
+                </div>
+            </section>
+
+            <section id="acerca" class="p-6-mw-850">
+                <h1>ACERCA</h1>
+                <p>
+                    RPG CONSTRULIVIANAS S.A.S <span class="col-green-200">fue fundada el 25 de agosto del 2014 en la ciudad de Medellín</span>, liderada por Robinson Orozco Gerente Administrativo, Patricia Valencia Gerente General y Gerson López Gerente Operativo; <span class="col-white">juntos formaron esta sociedad con más de 15 años de experiencia en diferentes áreas de la construcción de obras civiles</span>.
+                </p>
+            </section>
+
+            <section id="experiencia" class="p-6-mw-850">
+                <h1>EXPERIENCIA</h1>
+                <p>Hemos desarrollado proyectos en ciudades de diversos departamentos del país. <span class="col-green-200">Contamos con colaboradores calificados que nos garantizan un excelente nivel de cumplimiento en tiempo y forma</span>. Diseño, construcción y adecuación de: Centros comerciales Locales comerciales Locales bancarios Oficinas Bodegas Unidades residenciales Estaciones de servicio</p>
+            </section>
+
+            <section id="service" class="p-6-mw-850">
+                <h1>NUESTROS SERVICIOS</h1>
+                <ul>
+                    <li>Levantamiento topográfico</li>
+                    <li>Diseños</li>
+                    <li>Electricidad</li>
+                    <li>construcción</li>
+                    <li>Obra blanca</li>
+                    <li>Sistema Drywall</li>
+                    <li>Superboard</li>
+                    <li>RCI</li>
+                    <li>Mantenimientos y reformas en general</li>
+                    <li>Fachadas en vidrio</li>
+                </ul>
+            </section>
+
+            <section id="clientes" class="p-6-mw-850">
+                <h1>NUESTROS CLIENTES</h1>
+
+                <dl>
+                    <dt>CUEROS VELEZ S.A.S.</dt>
+                    <dd>fecha aproxidamente 18 tiendas a nivel nacional, todas culminadas en el tiempo estipulado y entregadas a satisfacción al área de arquitectura.</dd>
+                    <dt>ESTRUCTURAS METALICAS CONSTRUADEC S.A.S.</dt>
+                    <dd>Con la compañía hemos realizado interiorismo en los siguientes segmentos: </dd>
+                    <dd>unidades residenciales</dd>
+                    <dd>bodegas</dd>
+                    <dd>oficinas</dd>
+                    <dd>centros comerciales.</dd>
+                    <dt>JCR S.A.S.</dt>
+                    <dd>En adecuación de la estación de servicios Miraflores en la ciudad de Medellín, cumpliendo a cabalidad con los requerimientos del cliente.</dd>
+                    <dt>TRES CIMAS S.A.S.</dt>
+                    <dd>Ejecución de proyecto de construcción para el Banco de Bogotá en el centro comercial Arkadia en la ciudad de Medellín.</dd>
+                </dl>
+            </section>
+
+            <section id="mision_vision" class="p-6-mw-850">
+                <h1>NUESTA MISIÓN Y VISIÓN</h1>
+                <h2>Misión:</h2>
+                <p>
+                    En RPG CONSTRULIVIANAS S.A.S <span class="col-green-200">queremos brindar a nuestros clientes toda la confianza y tranquilidad en cualquier proyecto a desarrollar</span>, <span class="col-white"> partiendo desde la responsabilidad y sentido de pertenencia, asesorando constantemente desde nuestra experiencia</span>, buscando optimizar el tiempo y los recursos manteniendo altos niveles de calidad.
+                </p>
+                <h2>Visión:</h2>
+                <p>
+                    RPG CONSTRULIVIANAS S.A.S <span class="col-white">quiere ser reconocida para el año 2026 como uno de los mejores proveedores de interiorismo a nivel nacional</span>, <span class="col-green-200">trabajamos con disciplina y poseemos un excelente talento humano y profesional</span>, RPG CONSTRULIVIANAS S.A.S será un sinónimo de calidad y ese siempre será nuestro sello.
+                </p>
+            </section>
+
+            <section id="contacto" class="p-6-mw-850">
+                <h1>CONTACTANOS<span class="col-green-200">.</span></h1>
+                <div class="contact-container">
+
+                    <div class="contact-links">
+                        <div class="contact-item border-b-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram"
+                                width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
+                                <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+                                <path d="M16.5 7.5l0 .01" />
+                            </svg>
+                            <a href="https://www.instagram.com/construlivianasrpg/"
+                                target="_blank">@construlivianasrpg</a>
+                        </div>
+                        <div class="contact-item border-b-2">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                class="icon icon-tabler icon-tabler-brand-facebook-filled" width="24" height="24"
+                                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M18 2a1 1 0 0 1 .993 .883l.007 .117v4a1 1 0 0 1 -.883 .993l-.117 .007h-3v1h3a1 1 0 0 1 .991 1.131l-.02 .112l-1 4a1 1 0 0 1 -.858 .75l-.113 .007h-2v6a1 1 0 0 1 -.883 .993l-.117 .007h-4a1 1 0 0 1 -.993 -.883l-.007 -.117v-6h-2a1 1 0 0 1 -.993 -.883l-.007 -.117v-4a1 1 0 0 1 .883 -.993l.117 -.007h2v-1a6 6 0 0 1 5.775 -5.996l.225 -.004h3z"
+                                    stroke-width="0" fill="currentColor" />
+                            </svg>
+                            <a href="https://www.facebook.com/profile.php?id=100054477730152" target="_blank">RPG
+                                Construlivianas</a>
+                        </div>
+                        <div class="contact-item border-b-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="24"
+                                height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path
+                                    d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" />
+                                <path d="M3 7l9 6l9 -6" />
+                            </svg>
+                            <a href="mailto:rpgconstruivianas@hotmail.com"
+                                target="_blank">rpgconstruivianas@hotmail.com</a>
+                        </div>
+                        <div class="contact-item">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp"
+                                width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+                                <path
+                                    d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" />
+                            </svg>
+                            <a href="https://wa.me/573148204343" target="_blank">3148204343</a>
+                            <a href="https://wa.me/573105168110" target="_blank">3105168110</a>
+                        </div>
                     </div>
-                </a>
-                <a href="./assets/portfolio/tanninoVelez.html" class="portfolioItem">
-                    <img src="./assets/img/tanninoVelez/1.jpeg">
-                    <div class="portfolioItem_title">
-                        <h4>Tannino Velez</h4>
-                    </div>
-                </a>
-                <a href="./assets/portfolio/tiendaVelez.html" class="portfolioItem">
-                    <img src="./assets/img/tiendaVelez/1.jpeg">
-                    <div class="portfolioItem_title">
-                        <h4>Tienda Velez</h4>
-                    </div>
-                </a>
-            </div>
-        </section>
 
-        <section id="acerca">
-            <h1>ACERCA</h1>
-            <p>
-                RPG CONSTRULIVIANAS S.A.S fue fundada el 25 de agosto del 2014 en la ciudad de Medellín, liderada por Robinson Orozco Gerente Administrativo, Patricia Valencia Gerente General y Gerson López Gerente Operativo; juntos formaron esta sociedad con más de 15 años de experiencia en diferentes áreas de la construcción de obras civiles.
-            </p>
-        </section>
+                    <img class="contact-RPG-logo" src="/assets/img/rpg.svg" />
 
-        <section id="mision_vision">
-            <h1>NUESTA MISIÓN Y VISIÓN</h1>
-            <h2>Misión:</h2>
-            <p>
-                En RPG CONSTRULIVIANAS S.A.S queremos brindar a nuestros clientes toda la confianza y tranquilidad en cualquier proyecto a desarrollar, partiendo desde la responsabilidad y sentido de pertenencia, asesorando constantemente desde nuestra experiencia, buscando optimizar el tiempo y los recursos manteniendo altos niveles de calidad.
-            </p>
-            <h2>Visión:</h2>
-            <p>
-                RPG CONSTRULIVIANAS S.A.S quiere ser reconocida para el año 2026 como uno de los mejores proveedores de interiorismo a nivel nacional, trabajamos con disciplina y poseemos un excelente talento humano y profesional, RPG CONSTRULIVIANAS S.A.S será un sinónimo de calidad y ese siempre será nuestro sello.
-            </p>
-        </section>
-
-    </main>
-
-    <footer id="contacto">
-        <h1 class="contacto_title">CONTACTANOS</h1>
-        <div class="contacto_container">
-            <div class="contacto_content">
-                <div style="border-bottom: 2px solid #fff" class="contact_item">
-                    <i class="fa-brands fa-instagram"></i>
-                    <a href="https://www.instagram.com/construlivianasrpg/" target="_blank">@construlivianasrpg</a>
                 </div>
-                <div style="border-bottom: 2px solid #fff" class="contact_item">
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <a href="https://www.facebook.com/profile.php?id=100054477730152" target="_blank">RPG Construlivianas</a>
-                </div>
-                <div style="border-bottom: 2px solid #fff" class="contact_item">
-                    <i class="fa-solid fa-envelope"></i>
-                    <a href="mailto:rpgconstrulivianas@hotmail.com" target="_blank">rpgconstrulivianas@hotmail.com</a>
-                </div>
-                <div class="contact_item">
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <a href="https://wa.me/573148204343" target="_blank">3148204343</a>
-                    <a href="https://wa.me/573105168110" target="_blank">3105168110</a>
-                </div>
-            </div>
-            <img class="contact_RPG_logo" src="./assets/img/rpg.svg" alt="RPG">
-        </div>
-    </footer>
+            </section>
 
-    <script src="./assets/js/slider.js"></script>
-    <script src="https://kit.fontawesome.com/a22bc65f86.js" crossorigin="anonymous"></script>
+        </main>
+
+        <footer class="footer blur">
+            <p><span class="col-green-100">&copy; 2024 Mateo Muñoz.</span></p>
+            <p>Todos los derechos reservados</p>
+            <a href="#portafolio-contacto">Contactame</a>
+        </footer>
+
+    </div>
+
 </body>
 
 </html>
